Bug 173072. Fix XUL scrollbar regression by forcing a view update after reflow. r=bzbarsky,sr=dbaron